--- a/notify_client_android/2.0/demo/src/main/res/values-zh/strings.xml
+++ b/notify_client_android/2.0/demo/src/main/res/values-zh/strings.xml
@@ -1,9 +1,5 @@
 <resources>
-    <string name="ticker">行情</string>
-    <string name="btc">比特币</string>
-    <string name="single_market_alert">单个市场预警</string>
-    <string name="market_spread_alert">市场差价预警</string>
-    <string name="alert_list">提醒列表</string>
+
     <string name="list">列表</string>
     <string name="personality_setting">个性设置</string>
 
@@ -201,4 +197,6 @@
     </string-array>
     <string name="message_history">历史消息</string>
     <string name="send_message">发送消息</string>
+    <string name="document_location">文件位置</string>
+    <string name="set_alert">设置自定义提示</string>
 </resources>
