修改readme，修复发送界面bug

--- a/notify_client_android/2.0/demo/src/main/res/values-zh/strings.xml
+++ b/notify_client_android/2.0/demo/src/main/res/values-zh/strings.xml
@@ -199,4 +199,5 @@
     <string name="send_message">发送消息</string>
     <string name="document_location">文件位置</string>
     <string name="set_alert">设置自定义提示</string>
+    <string name="set_network">设置网络</string>
 </resources>
