--- a/notify_client_android/2.0/demo/src/main/res/values/strings.xml
+++ b/notify_client_android/2.0/demo/src/main/res/values/strings.xml
@@ -192,4 +192,5 @@
     <string name="send_message">send message</string>
     <string name="document_location">document location</string>
     <string name="set_alert">set alert</string>
+    <string name="set_network">set network</string>
 </resources>
