--- a/notify_client_android/2.0/demo/src/main/res/values/strings.xml
+++ b/notify_client_android/2.0/demo/src/main/res/values/strings.xml
@@ -193,4 +193,6 @@
     <string name="document_location">document location</string>
     <string name="set_alert">set alert</string>
     <string name="set_network">set network</string>
+    <string name="clearAll">clear all</string>
+    <string name="menu">menu</string>
 </resources>
